Description: Calling XTabPageModel.setImageURL with a valid image url via UNO API doesn't set the image on the tab button of the tab page. Steps to Reproduce: 1. install attached sample extension StarterProject.oxt 2. start Writer 3. open the extension's dialog via Menu using "Test Extension" -> "Show Dialog" 4. press the "set image" button Actual Results: Nothing seems to happen. Expected Results: The second tab should set an image beside the text Reproducible: Always User Profile Reset: Yes Additional Info: Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community Build ID: 7905dba8a5c76eb7b4da5580e4f77e1a9b0dc8f0 CPU threads: 12; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win Locale: de-DE (de_DE); UI: de-DE 9999TestM-NoUnit&Builds-NoPack-DebUti Calc: CL
Self confirming according to https://wiki.documentfoundation.org/QA/Guidelines_for_public_and_private_sector_deployments. Issue has originally been reported by another user in our internal issue tracker.
Created attachment 180778 [details] Sample extension to demontrate the issue
Created attachment 180779 [details] Sources
Ilhan Yesil committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/0f1837306ae5c2c2e10f256b872c46b0bfba00dd tdf#149575 UnoControlTabPageContainer: Handle tab image It will be available in 7.5.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Thanks for the patch, is there anything more to be done or will you close it as fixed? (In reply to Ilhan Yesil from comment #1) > Self confirming according to > https://wiki.documentfoundation.org/QA/ > Guidelines_for_public_and_private_sector_deployments. Issue has originally > been reported by another user in our internal issue tracker. Are you working for City of Munich, then?