tdf#149575 UnoControlTabPageContainer: Handle tab image

Setting a tab page's image in the tab button is done via
method 'XTabPageModel.setImageURL'.

Change-Id: Ideb096f88037dac26abe90fccae2251dcce84659